--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <div class="relative overflow-hidden rounded-t-lg">
                         <img src="./assets/images/portfolio-app.png" alt="Project 3" class="w-full h-48 object-cover">
                         <div class="project-overlay">
-                            <a href="#" class="project-link" target="_blank">
+                            <a href="https://florentak-tak.vercel.app/" class="project-link" target="_blank">
                                 <i class="fas fa-link"></i>
                             </a>
                             <a href="#" class="project-link" target="_blank">
