[Correctif] revue de la redirection des liens de certain project

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                             <a href="https://florentak-tak.vercel.app/" class="project-link" target="_blank">
                                 <i class="fas fa-link"></i>
                             </a>
-                            <a href="#" class="project-link" target="_blank">
+                            <a href="https://github.com/Florentak21/FlorenTak.git" class="project-link" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
